--- a/index.html
+++ b/index.html
@@ -32,18 +32,31 @@
         
         <ul>
           <li><a href="#WordHunt">Word Hunt Stats</a></li>
+          <li><a href="#Anagrams">Anagrams Stats</a></li>
           <li><a href="#WHJosie">WH Matches Josie</a></li>
           <li><a href="#WHPencil">WH Matches Pencil</a></li>
+          <li><a href="#AJosie">Anagrams Matches Josie</a></li>
+          <li><a href="#APencil">Anagrams Matches Pencil</a></li>
         </ul>
 
         <h2 id="WordHunt">Word Hunt Global Stats</h2>
-        <iframe src="WordHunt.html" width="90%"></iframe>
+        <iframe src="Word Games Stats/WordHunt.html" width="90%"></iframe>
+
+        <h2 id="Anagrams">Anagrams Global Stats</h2>
+        <iframe src="Word Games Stats/Anagrams.html" width="90%"></iframe>
 
         <h2 id="WHJosie">Josie Word Hunt Match History</h2>
-        <iframe src="WordHuntMatchesJosie.html" width="90%"></iframe>
+        <iframe src="Word Games Stats/WordHuntMatchesJosie.html" width="90%"></iframe>
 
         <h2 id="WHPencil">Pencil Word Hunt Match History</h2>
-        <iframe src="WordHuntMatchesPencil.html" width="90%"></iframe>
+        <iframe src="Word Games Stats/WordHuntMatchesPencil.html" width="90%"></iframe>
+
+        <h2 id="AJosie">Josie Anagrams Match History</h2>
+        <iframe src="Word Games Stats/AnagramMatchesJosie.html" width="90%"></iframe>
+
+        <h2 id="APencil">Pencil Anagrams Hunt Match History</h2>
+        <iframe src="Word Games Stats/AnagramMatchesPencil.html" width="90%"></iframe>
+
     </body>
 </html>
 
